--- a/mobile-app/bank-app/testFinal/app/src/main/res/layout/content_main.xml
+++ b/mobile-app/bank-app/testFinal/app/src/main/res/layout/content_main.xml
@@ -34,6 +34,7 @@
         android:layout_marginTop="90dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="112dp"
+        app:errorEnabled="true"
         app:layout_constraintBottom_toTopOf="@+id/pass_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +48,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/ingresar"
+        android:id="@+id/btn_ingresar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="126dp"
