--- a/mobile-app/bank-app/testFinal/app/src/main/res/layout/content_main.xml
+++ b/mobile-app/bank-app/testFinal/app/src/main/res/layout/content_main.xml
@@ -8,56 +8,40 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main" >
 
-    <EditText
-        android:id="@+id/pass_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="81dp"
-        android:layout_marginTop="113dp"
-        android:layout_marginEnd="117dp"
-        android:layout_marginBottom="371dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/password"
-        android:inputType="numberPassword"
+    <LinearLayout
+        android:layout_width="392dp"
+        android:layout_height="644dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout"
-        android:layout_width="395dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="112dp"
-        app:errorEnabled="true"
-        app:layout_constraintBottom_toTopOf="@+id/pass_txt"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.774"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <android.support.design.widget.TextInputEditText
+        <EditText
             android:id="@+id/id_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/usuario" />
-    </android.support.design.widget.TextInputLayout>
+            android:ems="10"
+            android:hint="@string/username"
+            android:inputType="number" />
 
-    <Button
-        android:id="@+id/btn_ingresar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="126dp"
-        android:layout_marginTop="76dp"
-        android:layout_marginEnd="197dp"
-        android:layout_marginBottom="209dp"
-        android:text="@string/ingresar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pass_txt" />
+        <EditText
+            android:id="@+id/pass_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/password"
+            android:inputType="numberPassword" />
+
+        <Button
+            android:id="@+id/btn_ingresar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/ingresar" />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
