--- a/mobile-app/bank-app/testFinal/app/src/main/res/layout/activity_main.xml
+++ b/mobile-app/bank-app/testFinal/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,6 @@
 
     <include
         layout="@layout/content_main"
-        android:layout_height="552dp"
-        />
+        android:layout_height="552dp" />
 
 </android.support.design.widget.CoordinatorLayout>
