--- a/mobile-app/bank-app/testFinal/app/src/main/res/layout/content_main.xml
+++ b/mobile-app/bank-app/testFinal/app/src/main/res/layout/content_main.xml
@@ -6,25 +6,18 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
-    tools:showIn="@layout/activity_main" >
+    tools:showIn="@layout/activity_main">
 
     <LinearLayout
         android:layout_width="392dp"
-        android:layout_height="644dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="150dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_height="638dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.774"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        tools:layout_editor_absoluteX="9dp"
+        tools:layout_editor_absoluteY="8dp">
 
         <EditText
             android:id="@+id/id_txt"
-            android:layout_width="match_parent"
+            android:layout_width="335dp"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/username"
@@ -32,7 +25,7 @@
 
         <EditText
             android:id="@+id/pass_txt"
-            android:layout_width="match_parent"
+            android:layout_width="337dp"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/password"
@@ -40,8 +33,9 @@
 
         <Button
             android:id="@+id/btn_ingresar"
-            android:layout_width="match_parent"
+            android:layout_width="337dp"
             android:layout_height="wrap_content"
+            android:baselineAligned="false"
             android:text="@string/ingresar" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
