--- a/mobile-app/bank-app/testFinal/app/src/main/res/layout/content_main.xml
+++ b/mobile-app/bank-app/testFinal/app/src/main/res/layout/content_main.xml
@@ -6,36 +6,57 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main" >
 
-    <LinearLayout
-        android:layout_width="392dp"
-        android:layout_height="638dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="9dp"
-        tools:layout_editor_absoluteY="8dp">
+    <EditText
+        android:id="@+id/pass_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="113dp"
+        android:layout_marginEnd="117dp"
+        android:layout_marginBottom="371dp"
+        android:autofillHints="Password"
+        android:ems="10"
+        android:hint="@string/password"
+        android:inputType="numberPassword"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 
-        <EditText
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayout"
+        android:layout_width="261dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="90dp"
+        app:errorEnabled="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.786"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/id_txt"
-            android:layout_width="335dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/username"
-            android:inputType="number" />
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:hint="@string/usuario" />
+    </android.support.design.widget.TextInputLayout>
 
-        <EditText
-            android:id="@+id/pass_txt"
-            android:layout_width="337dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/password"
-            android:inputType="numberPassword" />
-
-        <Button
-            android:id="@+id/btn_ingresar"
-            android:layout_width="337dp"
-            android:layout_height="wrap_content"
-            android:baselineAligned="false"
-            android:text="@string/ingresar" />
-    </LinearLayout>
+    <Button
+        android:id="@+id/btn_ingresar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="126dp"
+        android:layout_marginTop="76dp"
+        android:layout_marginEnd="197dp"
+        android:layout_marginBottom="209dp"
+        android:text="@string/ingresar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pass_txt" />
 </android.support.constraint.ConstraintLayout>
