--- a/mobile-app/bank-app/testFinal/app/src/main/res/layout/content_main.xml
+++ b/mobile-app/bank-app/testFinal/app/src/main/res/layout/content_main.xml
@@ -39,11 +39,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <android.support.design.widget.TextInputEditText
+        <EditText
             android:id="@+id/id_txt"
-            android:layout_width="250dp"
-            android:layout_height="50dp"
-            android:hint="@string/usuario" />
+            android:layout_width="227dp"
+            android:layout_height="53dp"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="User"
+            android:inputType="number" />
     </android.support.design.widget.TextInputLayout>
 
     <Button
