--- a/mobile-app/bank-app/testFinal/app/src/main/res/layout/content_main.xml
+++ b/mobile-app/bank-app/testFinal/app/src/main/res/layout/content_main.xml
@@ -8,58 +8,60 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main" >
 
-    <EditText
-        android:id="@+id/pass_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="113dp"
-        android:layout_marginEnd="117dp"
-        android:layout_marginBottom="371dp"
-        android:autofillHints="Password"
-        android:ems="10"
-        android:hint="@string/password"
-        android:inputType="numberPassword"
+    <LinearLayout
+        android:layout_width="395dp"
+        android:layout_height="556dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout"
-        android:layout_width="261dp"
-        android:layout_height="68dp"
-        android:layout_marginStart="75dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginEnd="90dp"
-        app:errorEnabled="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.786"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/id_txt"
-            android:layout_width="227dp"
-            android:layout_height="53dp"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="User"
-            android:inputType="number" />
-    </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayout"
+            android:layout_width="344dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="90dp"
+            app:errorEnabled="true">
 
-    <Button
-        android:id="@+id/btn_ingresar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="126dp"
-        android:layout_marginTop="76dp"
-        android:layout_marginEnd="197dp"
-        android:layout_marginBottom="209dp"
-        android:text="@string/ingresar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pass_txt" />
+            <EditText
+                android:id="@+id/id_txt"
+                android:layout_width="328dp"
+                android:layout_height="68dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="@string/user"
+                android:inputType="number" />
+        </android.support.design.widget.TextInputLayout>
+
+        <EditText
+            android:id="@+id/pass_txt"
+            android:layout_width="328dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="0dp"
+            android:autofillHints="Password"
+            android:ems="10"
+            android:hint="@string/password"
+            android:inputType="numberPassword" />
+
+        <Button
+            android:id="@+id/btn_ingresar"
+            android:layout_width="128dp"
+            android:layout_height="66dp"
+            android:layout_marginStart="120dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="197dp"
+            android:layout_marginBottom="209dp"
+            android:text="@string/ingresar" />
+
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
