--- a/mobile-app/bank-app/testFinal/app/src/main/res/layout/activity_main.xml
+++ b/mobile-app/bank-app/testFinal/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,20 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="76dp"
         android:theme="@style/AppTheme.AppBarOverlay">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="82dp"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/logo" />
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="12dp"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
