--- a/mobile-app/bank-app/testFinal/app/src/main/res/layout/content_send_money_test.xml
+++ b/mobile-app/bank-app/testFinal/app/src/main/res/layout/content_send_money_test.xml
@@ -28,7 +28,7 @@
             android:ems="10"
             android:hint="@string/destinatario"
             android:importantForAutofill="no"
-            android:inputType="numberPassword"
+            android:inputType="number"
             tools:targetApi="o" />
 
         <EditText
