--- a/mobile-app/bank-app/testFinal/app/src/main/res/layout/content_send_money_test.xml
+++ b/mobile-app/bank-app/testFinal/app/src/main/res/layout/content_send_money_test.xml
@@ -21,6 +21,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/balance_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autoText="false"
+            android:text="SALDO: " />
+
         <EditText
             android:id="@+id/txt_reciever"
             android:layout_width="match_parent"
